# maud-ui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  results.tsv  server.ts
.autoagent/maud-ui-shadcn-audit/: gap-list.md  state.md
.claude/: autoagent-state.md  overnight-state.md
css/: maud-ui.css
css/blocks/: auth-login.css  common.css  dashboard-stats.css  data-table-full.css  pricing-tiers.css  settings.css  shell-sidebar.css
css/components/: accordion.css  alert.css  alert_dialog.css  aspect_ratio.css  avatar.css  badge.css  breadcrumb.css  button.css  button_group.css  calendar.css  card.css  carousel.css  chart.css  checkbox.css  collapsible.css  combobox.css  command.css  context_menu.css  data_table.css  date_picker.css  dialog.css  docs.css  drawer.css  empty_state.css  field.css  fieldset.css  hover_card.css  input.css  input_group.css  input_otp.css  item.css  kbd.css  label.css  menu.css  menubar.css  meter.css  native_select.css  navigation_menu.css  number_field.css  pagination.css  (+23 more)
docs/: TAILWIND.md
docs/components/: README.md  accordion.md  alert.md  alert_dialog.md  aspect_ratio.md  avatar.md  badge.md  breadcrumb.md  button.md  button_group.md  calendar.md  card.md  carousel.md  chart.md  checkbox.md  collapsible.md  combobox.md  command.md  context_menu.md  data_table.md  date_picker.md  dialog.md  direction.md  drawer.md  empty_state.md  field.md  fieldset.md  hover_card.md  input.md  input_group.md  input_otp.md  item.md  kbd.md  label.md  menu.md  menubar.md  meter.md  native_select.md  navigation_menu.md  number_field.md  (+25 more)
evals/: autoagent-session-end.md  maud-ui-deferred.md  maud-ui-overnight-summary.md
examples/: showcase.rs
js/: build.mjs  export-static.mjs  maud-ui.ts
public/: index.html
public/accordion/: index.html
public/alert/: index.html
public/alert_dialog/: index.html
public/aspect_ratio/: index.html
public/avatar/: index.html
public/badge/: index.html
public/blocks/: index.html
public/breadcrumb/: index.html
public/button/: index.html
public/button_group/: index.html
public/calendar/: index.html
public/card/: index.html
public/carousel/: index.html
public/chart/: index.html
public/checkbox/: index.html
public/collapsible/: index.html
public/combobox/: index.html
public/command/: index.html
public/context_menu/: index.html
public/css/: maud-ui.css  maud-ui.min.css
public/data_table/: index.html
public/date_picker/: index.html
public/dialog/: index.html
public/direction/: index.html
public/drawer/: index.html
public/empty_state/: index.html
public/field/: index.html
public/fieldset/: index.html
src/: lib.rs  tokens.rs
tests/: render_tests.rs
(+151 files in other folders)
