[package]
name = "maud-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Headless accessible UI components for maud + htmx"
repository = "https://git.kapable.dev/kapable/maud-ui"
readme = "README.md"
keywords = ["maud", "htmx", "ui", "components", "accessibility"]
categories = ["web-programming"]

[dependencies]
maud = { version = "0.27", features = ["axum"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[[example]]
name = "showcase"
path = "examples/showcase.rs"
